--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Digital Projects</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
+</head>
+<body>
 <h1>Digital Projects</h1>
 <ul>
   <li>
     <a href="https://sandnelson13.github.io/Assignment1/">Assignment 1</a>
   </li>
 </ul>
+</body>
+</html>
