--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <li>
     <a href="https://sandnelson13.github.io/Assignment1/">Assignment 1</a>
   </li>
+  <li>test</li>
 </ul>
 </body>
 </html>
